<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/level1_scroll_view"
    android:background="@color/lightColorBg"
    tools:context=".CustomItem.UserItemLevel1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_user1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/levels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:layout_gravity="center"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tv_level_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_circle_cur_level"
                    android:fontFamily="@font/paytone_one"
                    android:gravity="center"
                    android:text="@string/level1"
                    android:textColor="#000000" />

                <View
                    android:id="@+id/tv_row1"
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="#020202" />

                <TextView
                    android:id="@+id/tv_level_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_circle_level"
                    android:gravity="center"
                    android:fontFamily="@font/paytone_one"
                    android:text="@string/level2"
                    android:textColor="#000000" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="#020202" />

                <TextView
                    android:id="@+id/tv_level_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/ic_circle_level"
                    android:text="@string/level3"
                    android:fontFamily="@font/paytone_one"
                    android:textColor="#000000" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/cocktail_name"
                android:textColor="#000000"
                android:textColorHighlight="#451010"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cocktailNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:maxLines="1"
                android:paddingEnd="20dp"
                app:counterEnabled="true"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cocktailNameText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="15dp"
            android:background="@color/colorRipple" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/category"
                android:textSize="@dimen/h2"
                android:gravity="center"
                android:textColor="#000000"
                android:textColorHighlight="#451010"
                android:textStyle="bold"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/selectCategoryChipGroup"
                app:singleSelection="true"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/category_chip_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/required_field"
                android:textStyle="bold"
                android:textColor="@color/errorColor" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="15dp"
            android:background="@color/colorRipple" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/icon"
                android:textColor="#000000"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/select_icon_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#303F9F"
                android:text="@string/select" />

            <View
                android:layout_width="10dp"
                android:layout_height="2dp" />

            <ImageView
                android:id="@+id/selected_icon_IV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:minHeight="100dp" />

            <TextView
                android:id="@+id/icon_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/required_field"
                android:textColor="#D60E0E" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="15dp"
            android:background="@color/colorRipple" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/cocktail_image"
                android:textColor="#000000"
                android:textColorHighlight="#451010"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/upload_img_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#303F9F"
                android:text="@string/upload" />

            <ImageView
                android:id="@+id/upload_user_img_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/rotate_upload_view_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#50A2CF"
                    android:text="@string/rotate_view" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="2dp" />

                <Button
                    android:id="@+id/del_upload_img_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#50A2CF"
                    android:text="@string/delete" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/nextButton"
                android:fontFamily="@font/paytone_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="next"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
